新增专家详情内容演示页面

--- a/components/api/config.json
+++ b/components/api/config.json
@@ -1,5 +1,32 @@
 {
     "token": "oauth/token",
-    "expertList": "/api/v1/expert/list"
-
+    "expertList": "api/v1/expert/list",
+    "expertCreate": "api/v1/expert/create",
+    "expertCreateEduExp": "api/v1/expert/create_education_experience",
+    "expertCreateGeneralComments": "api/v1/expert/create_general_comments",
+    "expertCreateNotes": "api/v1/expert/create_notes",
+    "expertCreateWorkExp": "api/v1/expert/create_work_experience",
+    "expertDelete": "api/v1/expert/delete",
+    "expertDeleteEduExp": "api/v1/expert/delete_education_experience",
+    "expertDeleteGeneralComments": "api/v1/expert/delete_general_comments",
+    "expertDeleteNotes": "api/v1/expert/delete_notes",
+    "expertDeleteWorkExp": "api/v1/expert/delete_work_experience",
+    "expertGetMeta": "api/v1/expert/get_meta",
+    "expertGetContactInfo": "api/v1/expert/get_contact_information",
+    "expertGetEducationExp": "api/v1/expert/get_education_experience",
+    "expertGetFinanceInfo": "api/v1/expert/get_finance_information",
+    "expertGetGeneralComments": "api/v1/expert/get_general_comments",
+    "expertGetIdentityInfo": "api/v1/expert/get_identity_information",
+    "expertGetNotes": "api/v1/expert/get_notes",
+    "expertGetResume": "api/v1/expert/get_resume",
+    "expertGetWorkExp": "api/v1/expert/get_work_experience",
+    "expertUpdateContactInfo": "api/v1/expert/update_contact_information",
+    "expertUpdateEduExp": "api/v1/expert/update_education_experience",
+    "expertUpdateFinanceInfo": "api/v1/expert/update_finance_information",
+    "expertUpdateGeneralComments": "api/v1/expert/update_general_comments",
+    "expertUpdateIdentityInfo": "api/v1/expert/update_identity_information",
+    "expertUpdateMeta": "api/v1/expert/update_meta",
+    "expertUpdateNotes": "api/v1/expert/update_notes",
+    "expertUpdateResume": "api/v1/expert/update_resume",
+    "expertUpdateWorkExp": "api/v1/expert/update_work_experience"
 }
