--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "css-loader": "^1.0.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
+    "laydate": "^1.0.7",
     "mini-css-extract-plugin": "^0.4.5",
     "node-sass": "^4.9.2",
     "react": "^16.4.2",
