--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "node-sass": "^4.9.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-lifecycles-compat": "^3.0.4",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "sass-loader": "^7.1.0",
