--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,14 @@
 {
     "presets": ["es2015", "react", "stage-0"],
-    "plugins": ["transform-class-properties"]
+    "plugins": ["transform-class-properties"],
+    "env": {
+        "production": {
+            // "presets": ["react-optimize"], // react-optimize去除PropsType校验
+            "minified": true, // 压缩代码
+            "comments": false, // 不产生注释
+        },
+        // "development": {
+        //     "common": true
+        // }
+    }
 }
