--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "private": true,
   "scripts": {
     "start": "webpack-dev-server --open",
+    "analyzer": "webpack --json | webpack-bundle-size-analyzer",
+    "build:dev": "NODE_ENV=development webpack --config .webpack/dev.webpack.js",
+    "build:prd": "NODE_ENV=production webpack --config .webpack/prd.webpack.js",
+    "dev": "BABEL_ENV=development NODE_ENV=development webpack-dev-server --process --config .webpack/dev.webpack.js",
     "create": "node components/hapi/hapi.js page",
     "new": "node components/hapi/hapi.js component",
     "delete": "node components/hapi/hapi.js delete page",
@@ -27,13 +31,17 @@
   },
   "homepage": "https://github.com/EchoHub/Hapi.admin#readme",
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "colors": "^1.3.1",
     "history": "^4.7.2",
+    "html-loader": "^0.5.5",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5"
+    "webpack-dev-server": "^3.1.5",
+    "webpack-merge": "^4.2.1"
   },
   "devDependencies": {
+    "@babel/polyfill": "^7.2.5",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
@@ -46,6 +54,7 @@
     "classnames": "^2.2.6",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "laydate": "^1.0.7",
@@ -54,10 +63,12 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-lifecycles-compat": "^3.0.4",
+    "react-optimize": "^1.0.3",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
+    "uglifyjs-webpack-plugin": "^2.1.1",
     "url-loader": "^1.0.1"
   }
 }
