--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-optimize": "^1.0.3",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "rimraf": "^2.6.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^2.1.1",
